VR: Add java-side plumbing for updating GVR Keyboard

Note that this path is not exercised yet.

Bug: 799584
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I45f34d54eabcbd539c17d3d87ba8c029489a0f28
Reviewed-on: https://chromium-review.googlesource.com/944750
Commit-Queue: Yash Malik <ymalik@chromium.org>
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#540391}(cherry picked from commit d68a05a9d5eb7dbe2280b5838d379f8807cae22d)
Reviewed-on: https://chromium-review.googlesource.com/952644
Reviewed-by: Yash Malik <ymalik@chromium.org>
Cr-Commit-Position: refs/branch-heads/3359@{#52}
Cr-Branched-From: 66afc5e5d10127546cc4b98b9117aff588b5e66b-refs/heads/master@{#540276}